# IA-FEMesh

./: CMakeLists.txt  Copyright.txt  README.md  ReadMe.txt  index.html  params.json
Code/Common/: CMakeLists.txt  mimxApplyNodeElementNumbers.cxx  mimxApplyNodeElementNumbers.h  mimxCheckTypeOfFile.cxx  mimxCheckTypeOfFile.h  mimxCommonDefine.h  mimxCreateIntervertebralDiscElementSets.cxx  mimxCreateIntervertebralDiscElementSets.h  mimxFileNames.h  mimxIncludeFileNames.h  mimxLinkedList.h  mimxMatrixTemplate.h  mimxMergeNodesPointAndCellData.cxx  mimxMergeNodesPointAndCellData.h  mimxMeshSeed.cxx  mimxMeshSeed.h  mimxRegisterBSplineFilter.cxx  mimxRegisterBSplineFilter.h  mimxRegisterVersorRigidFilter.cxx  mimxRegisterVersorRigidFilter.h  mimxTransformIO.cxx  mimxTransformIO.h  vtkContainer.h  vtkLinkedList.h  vtkLinkedList.txx  vtkLinkedListWrapper.cxx  vtkLinkedListWrapper.h  vtkLinkedListWrapperTree.cxx  vtkLinkedListWrapperTree.h  vtkLocalAxesActor.cxx  vtkLocalAxesActor.h  vtkMeshQualityClass.cxx  vtkMeshQualityClass.h  vtkMimxActorBase.cxx  vtkMimxActorBase.h  vtkMimxApplyNodeElementNumbers.cxx  vtkMimxApplyNodeElementNumbers.h  vtkMimxBoundaryConditionActor.cxx  vtkMimxBoundaryConditionActor.h  vtkMimxBoundingBoxSource.cxx  (+32 more)
Code/Filter/: CMakeLists.txt  itkMimxAccumulator.h  mimxDiscreteGaussianImageFilter.cxx  vtkMeshQualityExtended.cxx  vtkMeshQualityExtended.h  vtkMimxAddUnstructuredHexahedronGridCell.cxx  vtkMimxAddUnstructuredHexahedronGridCell.h  vtkMimxApplyImageBasedMaterialProperties.cxx  vtkMimxApplyImageBasedMaterialProperties.h  vtkMimxAttachBoundingBoxMesh.cxx  vtkMimxAttachBoundingBoxMesh.h  vtkMimxBoundingBoxFromBounds.cxx  vtkMimxBoundingBoxFromBounds.h  vtkMimxBoundingBoxFromUnstructuredGrid.cxx  vtkMimxBoundingBoxFromUnstructuredGrid.h  vtkMimxBoundingBoxSurfaceMesh.cxx  vtkMimxBoundingBoxSurfaceMesh.h  vtkMimxBoundingBoxToStructuredGrids.cxx  vtkMimxBoundingBoxToStructuredGrids.h  vtkMimxButterflyMeshFromBounds.cxx  vtkMimxButterflyMeshFromBounds.h  vtkMimxClipImageFromBox.cxx  vtkMimxClipImageFromBox.h  vtkMimxComputeNormalsFromPolydataFilter.h  vtkMimxConstrainedSmoothPolyDataFilter.cxx  vtkMimxConstrainedSmoothPolyDataFilter.h  vtkMimxCylindricalMesh.cxx  vtkMimxCylindricalMesh.h  vtkMimxDeleteUnstructuredHexahedronGridCell.cxx  vtkMimxDeleteUnstructuredHexahedronGridCell.h  vtkMimxEdgeToPlanarStructuredGrid.cxx  vtkMimxEdgeToPlanarStructuredGrid.h  vtkMimxEdgeToStructuredGrid.cxx  vtkMimxEdgeToStructuredGrid.h  vtkMimxEditUnstructuredHexahedronGrid.cxx  vtkMimxEditUnstructuredHexahedronGrid.h  vtkMimxEquivalancePoints.cxx  vtkMimxEquivalancePoints.h  vtkMimxExtractElementNumbersOfaFaceFilter.cxx  vtkMimxExtractElementNumbersOfaFaceFilter.h  (+70 more)
Code/IO/: CMakeLists.txt  itkMimxAbaqusMeshFileWriter.h  itkMimxAbaqusMeshFileWriter.txx  itkMimxReadHistogramBinValuesFilter.h  itkMimxReadHistogramBinValuesFilter.txx  vtkMimxAbaqusFileWriter.cxx  vtkMimxAbaqusFileWriter.h  vtkMimxIntervertebralDiscAbaqusWriter.cxx  vtkMimxIntervertebralDiscAbaqusWriter.h
Code/Widgets/: CMakeLists.txt  vtkMimxBWidgetPlusIPWidget.cxx  vtkMimxBWidgetPlusIPWidget.h  vtkMimxBoundingBoxWidget.cxx  vtkMimxBoundingBoxWidget.h  vtkMimxCreateBuildingBlockFromPickWidget.cxx  vtkMimxCreateBuildingBlockFromPickWidget.h  vtkMimxCreateElementSetWidgetFEMesh.cxx  vtkMimxCreateElementSetWidgetFEMesh.h  vtkMimxExtractCellWidget.cxx  vtkMimxExtractCellWidget.h  vtkMimxExtractEdgeWidget.cxx  vtkMimxExtractEdgeWidget.h  vtkMimxExtractFaceWidget.cxx  vtkMimxExtractFaceWidget.h  vtkMimxExtractMultipleFaceWidget.cxx  vtkMimxExtractMultipleFaceWidget.h  vtkMimxModPointWidget.cxx  vtkMimxModPointWidget.h  vtkMimxPlaceLocalAxesWidget.cxx  vtkMimxPlaceLocalAxesWidget.h  vtkMimxPolyDataWidget.cxx  vtkMimxPolyDataWidget.h  vtkMimxSelectCellsWidget.cxx  vtkMimxSelectCellsWidget.h  vtkMimxSelectCellsWidgetFEMesh.cxx  vtkMimxSelectCellsWidgetFEMesh.h  vtkMimxSelectPointsWidget.cxx  vtkMimxSelectPointsWidget.h  vtkMimxTraceContourWidget.cxx  vtkMimxTraceContourWidget.h  vtkMimxUnstructuredGridExtractWidget.cxx  vtkMimxUnstructuredGridExtractWidget.h  vtkMimxUnstructuredGridWidget.cxx  vtkMimxUnstructuredGridWidget.h  vtkMimxViewMergePointsWidget.cxx  vtkMimxViewMergePointsWidget.h
Programs/AbaqusWriterModule/: AbaqusWriterModule.cxx  AbaqusWriterModule.xml  AssignMeshMaterialPropertiesModule.cxx  AssignMeshMaterialPropertiesModule.xml  CMakeLists.txt
Programs/BSplineRegistration/: CMakeLists.txt  CMakeLists.txt~  gtractCoRegAnatomyRigid.cxx~  itkAnatomicalBSplineFilter.cxx  itkAnatomicalBSplineFilter.h  itkAnatomicalVersorRigidFilter.cxx  itkAnatomicalVersorRigidFilter.h  mimxCoRegisterBSpline.cxx  mimxCoRegisterBSpline.cxx~  mimxCoRegisterRigid.cxx  mimxCoRegisterRigid.cxx~  mimxResample8bitImage.cxx  mimxResample8bitImage.cxx~  mimxResampleFloatImage.cxx  mimxResampleFloatImage.cxx~  mimxResampleImage.cxx  mimxResampleImage.cxx~
Programs/CheckMeshQuality/: CMakeLists.txt  CheckMeshQuality.cxx
Programs/ClosestPointProjection/: CMakeLists.txt  SolidMeshClosestPointProjection.cxx
Programs/CreateSurface/: CMakeLists.txt  CreateSurface.cxx  CreateSurface.h  CreateSurfaceGui.fl  CreateSurfaceMainFunction.cxx  GenerateNormals.cxx  GenerateNormals.h  GenerateSurfaceFromMask.cxx  GenerateSurfaceNormalsGui.fl  SurfaceNormalMainFunction.cxx
Programs/DeformableBoundary/: CMakeLists.txt  DeformableBoundary.cxx
Programs/DeformableFeRegistration/: CMakeLists.txt  DeformImageFeRegistration.cxx  DeformableRegistration.cxx  ItkMeshToFEMMesh.h  ItkMeshToFEMMesh.txx  LoadingOutput.txt  vtkComputeNormalsFromPolydataFilter.cxx  vtkComputeNormalsFromPolydataFilter.h  vtkPolyDataToitkMesh.cxx  vtkPolyDataToitkMesh.h  vtkUnstructuredGridToitkMesh.cxx  vtkUnstructuredGridToitkMesh.h
Programs/DeformableFeRegistrationModule/: CMakeLists.txt  DeformableFeRegistration.cxx  DeformableFeRegistration.xml  MappedMeshModule.cxx  MappedMeshModule.xml
Programs/FEMeshView/: CMakeLists.txt  KWMeshQualityViewer.cxx  KWMeshQualityViewerExample.cxx  vtkFaceHedgeHog.cxx  vtkFaceHedgeHog.h  vtkKWMeshViewerApplication.cxx  (+8 more)
(+340 files in other folders)
